# navchPractika

./: Airplane.cpp  Airplane.h  BeachVacation.cpp  BeachVacation.h  CMakeLists.txt  Car.cpp  Car.h  RoadTrip.cpp  RoadTrip.h  Transport.h  Trip.cpp  Trip.h  main.cpp  trips.txt
